fix: init menu collapse

--- a/src/style/element/index.scss
+++ b/src/style/element/index.scss
@@ -61,5 +61,5 @@ $--colors: (
 
 :root {
   // --el-color-primary: #a0c4ff;
-  --el-menu-icon-width: 40px;
+  --el-menu-icon-width: 20px;
 }
